--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
 
             <!-- Header -->
             <header id="header">
-                <a href="virtualtour.html" class="logo">Craft3d</a>
+                <a href="index.html" class="logo">Craft3d</a>
             </header>
 
             <!-- Nav -->
             <nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="virtualtour.html">Tours</a></li>
+							<li class="active"><a href="index.html">Tours</a></li>
 							<li><a href="#footer">Contact</a></li>
 							<!-- <li><a href="elements.html">Elements Reference</a></li> -->
 						</ul>
@@ -170,7 +170,7 @@
 
             <!-- Copyright -->
             <div id="copyright">
-                <ul><li>&copy; craft3d</li><li>Design: <a href="virtualtour.html">3dgeneralist</a></li></ul>
+                <ul><li>&copy; craft3d</li><li>Design: <a href="index.html">3dgeneralist</a></li></ul>
             </div>
 
         </div>
